[package]
name = "bridge-rs-plugin"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["twilight-webhook"]

[dependencies]
azalea = { git = "https://github.com/mat-1/azalea", default-features = false, rev = "776f714" }
parking_lot = "0.12.1"
pretty_env_logger = "0.5.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "parking_lot", "signal"] }
bevy_log = "0.11.0"
twilight-cache-inmemory = { version = "0.15.2" }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
twilight-validate = "0.15.1"
twilight-webhook = { path = "twilight-webhook" }
dotenvy = "0.15.7"
async-compat = "0.2.1"
bevy_tasks = "0.11.0"
futures-lite = "1.13.0"
log = "0.4.19"
thiserror = "1.0.43"
anyhow = "1.0.72"
once_cell = "1.18.0"
lazy-regex = "3.0.0"
test-case = "3.1.0"
twilight-util = { version = "0.15.2", features = ["builder"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
