[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["twilight-webhook"]

[dependencies]
azalea = { git = "https://github.com/mat-1/azalea", default-features = false, rev = "f0ff8e7" }
parking_lot = "0.12.1"
pretty_env_logger = "0.5.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "parking_lot", "signal"] }
bevy_log = "0.11.0"
twilight-cache-inmemory = { version = "0.15.2" }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
twilight-webhook = { path = "twilight-webhook" }
dotenvy = "0.15.7"
log = "0.4.20"
thiserror = "1.0.43"
anyhow = "1.0.72"
once_cell = "1.18.0"
lazy-regex = "3.0.0"
test-case = "3.1.0"
twilight-util = { version = "0.15.2", features = ["builder"] }
twilight-interactions = "0.15.2"
fuzzy-matcher = "0.3.7"
sorted-vec = "0.8.2"
dashmap = "5.5.0"
futures = "0.3.28"
async-trait = "0.1.73"
async-broadcast = "0.5.1"
strum = { version = "0.25.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
