[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["twilight-webhook"]

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "4f288b1", default-features = false }
parking_lot = "0.12.1"
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "signal",
] }
twilight-cache-inmemory = { version = "0.15.4" }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-webhook = { path = "twilight-webhook" }
dotenvy = "0.15.7"
thiserror = "1.0.57"
anyhow = "1.0.80"
once_cell = "1.19.0"
lazy-regex = "3.1.0"
test-case = "3.3.1"
twilight-util = { version = "0.15.4", features = ["builder"] }
twilight-interactions = "0.15.2"
fuzzy-matcher = "0.3.7"
sorted-vec = "0.8.3"
dashmap = "5.5.3"
futures = "0.3.30"
async-broadcast = "0.7.0"
strum = { version = "0.26.1", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "parking_lot",
] }
tracing = "0.1.40"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
