[package]
name = "prelude"
description = "Common types and traits for the Bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.71"
async-broadcast = "0.5.1"
azalea = { git = "https://github.com/mat-1/azalea", rev = "53d51a5", default-features = false }
log = "0.4.17"
serenity = { version = "0.11.5", default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["sync"] }
